fix the issue that the text do not wrap

--- a/src/shared/components/Comments/CommentContent.module.css
+++ b/src/shared/components/Comments/CommentContent.module.css
@@ -15,6 +15,7 @@
 .comment {
   font-size: 2rem;
   line-height: 1.3;
+  white-space: pre-wrap;
 }
 
 @media (max-width: 768px) {
